# aether-identity

./: .env.development  .env.example  .env.production  .gitignore  .mailmap  Dockerfile  Dockerfile.cloud  Dockerfile.dev  Makefile  README.md  build.sh  deploy.sh  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint-cloud.sh  entrypoint.sh  go.mod  go.sum  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  tsconfig.json
.github/: COMMERCIAL.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
api/: package.backend.json  prisma.config.ts  tsconfig.json
app/: .env.example  Dockerfile  Dockerfile.dev  Makefile  README.md  build-dev.sh  build-docker-dev.sh  docker-compose.dev.yml  globals.css  layout.tsx  middleware.ts  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  start-dev.sh  tsconfig.json
cmd/: ARCHITECTURE.md  Makefile  README.md  aether-console  go.mod  go.sum  main.go
docs/: API_DOCUMENTATION.md  DYNAMIC_DATABASE.md  DYNAMIC_REDIRECT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PUBLIC_FILES_SUMMARY.md  README.md  admin-dashboard-redesign.md  next.config.js  package.json  theme.config.tsx
infrastructure/: Makefile
messages/: package.json
options/: go.mod
package/: Makefile  README.md  package.json
package/python/: README.md  pyproject.toml  requirements.txt
package/python/aether_identity/: __init__.py  client.py  exceptions.py  types.py
package/python/aether_identity/core/: __init__.py  session.py  transport.py
package/python/aether_identity/modules/: __init__.py  auth.py  device.py  eid.py  machine.py  session.py  token.py  totp.py  user.py
package/python/aether_identity/server/: __init__.py  cache.py  config.py  helpers.py  hooks.py  middleware.py  types.py
package/rust/: Cargo.toml
package/rust/src/: lib.rs
package/rust/src/core/: session.rs  transport.rs
package/rust/src/types/: mod.rs
prisma/: README.md  package.json  prisma.config.ts  schema.prisma  seed.ts  test-db-connection.ts  vault.config.ts
public/: .htaccess  PRIVACY.md  README.md  SECURITY.md  TERMS.md  favicon.conf  manifest.json  meta.conf  robots.txt  sitemap.xml  swagger.json
routers/: architectures.md
scripts/: generate_system_key.sh  (+2 more)
(+757 files in other folders)
