[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aether-identity"
version = "1.0.0"
description = "Official Python SDK for Aether Identity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Sky Genesis Enterprise" }
]
keywords = [
    "aether",
    "identity",
    "authentication",
    "oauth2",
    "sdk"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "flask>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/skygenesisenterprise/aether-identity"
Documentation = "https://wiki.skygenesisenterprise.net/aether_identity/sdk/python"
Repository = "https://github.com/skygenesisenterprise/aether-identity.git"

[tool.hatch.build.targets.wheel]
packages = ["aether_identity"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
