[package]
name = "aether_identity_rust"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Aether Identity (equivalent to @aether-identity/node)"
license = "MIT"
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[workspace]
